--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <title>"E.T.I.R.Z" - José Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link rel="shortcut icon" href="/resources/images/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="/resources/images/favicon.ico" type="image/x-icon" />
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="/styles/styles.css" />
     </head>
@@ -109,6 +109,7 @@
                         </div>
                     </article>
                 </div>
+                <video class="video-container" autoplay loop><source src="/resources/video/navidad_etirz.mp4" type="video/mp4"></video>
             </section>
         </main>
         <footer>
