--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </div>
                     </article>
                 </div>
-                <video class="video-container" autoplay loop><source src="/resources/video/navidad_etirz.mp4" type="video/mp4"></video>
+                <video class="video-container" controls loop><source src="/resources/video/navidad_etirz.mp4" type="video/mp4"></video>
             </section>
         </main>
         <footer>
