--- a/pages/galeria/galeria.html
+++ b/pages/galeria/galeria.html
@@ -15,6 +15,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="Author" content="Gabriel Vieira">
         <title>Galería - Jose Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="shortcut icon" href="/resources/images/favicon.ico" type="image/x-icon">
@@ -221,31 +222,31 @@
                         <section class="gallery-div">
                             <div class="struc" id="we">
                                 <a href="#image15">
-                                    <img src="/resources/images/galeria/dia_alimentacion.jpg" alt="" class="gallery-img" />
+                                    <img src="/resources/images/galeria/dia_alimentacion.jpg" alt="Celebración al Dia de la Alimentación en el Comedor de la Institución" title="Celebración al Dia de la Alimentación en el Comedor de la Institución" class="gallery-img" />
                                 </a>
                                 <a href="#image16">
-                                    <img src="/resources/images/galeria/mision_vision_valores.jpeg" alt="" class="gallery-img" />
+                                    <img src="/resources/images/galeria/mision_vision_valores.jpeg" alt="Estudiantes de 1er Año 'C'" title="Estudiantes de 1er Año 'C'" class="gallery-img" />
                                 </a>
                                 <a href="#image17">
-                                    <img src="/resources/images/galeria/simon_diaz.jpg" alt="" class="gallery-img" />
+                                    <img src="/resources/images/galeria/simon_diaz.jpg" alt="Dibujo en honor a Simón Díaz (Cantante venezolano)" title="Dibujo en honor a Simón Díaz (Cantante venezolano)" class="gallery-img" />
                                 </a>
                                 <a href="#image18">
-                                    <img src="/resources/images/slider_principal_2.jpg" alt="" class="gallery-img" />
+                                    <img src="/resources/images/slider_principal_2.jpg" alt="Recreación de Educación Física en el Patio Central" title="Recreación de Educación Física en el Patio Central" class="gallery-img" />
                                 </a>
                                 <a href="#image19">
-                                    <img src="/resources/images/galeria/4to_informatica.jpg" alt="" class="gallery-img">
+                                    <img src="/resources/images/galeria/4to_informatica.jpg" alt="Estudiantes de 4to de Informática en el Día de la Alimentación" title="Estudiantes de 4to de Informática en el Día de la Alimentación" class="gallery-img">
                                 </a>
                                 <a href="#image20">
-                                    <img src="/resources/images/galeria/equipo_4to_mecanica.jpg" alt="" class="gallery-img">
+                                    <img src="/resources/images/galeria/equipo_4to_mecanica.jpg" alt="4to Año de Mecánica, el día de la Presentación de Proyecto (30/11/2022)" title="4to Año de Mecánica, el día de la Presentación de Proyecto (30/11/2022)" class="gallery-img">
                                 </a>
                                 <a href="#image21">
-                                    <img src="/resources/images/galeria/equipo_6to_informatica.jpg" alt="" class="gallery-img">
+                                    <img src="/resources/images/galeria/equipo_6to_informatica.jpg" alt="6to Año de Informática (Creadores de la Página Web)" title="6to Año de Informática (Creadores de la Página Web)" class="gallery-img">
                                 </a>
                                 <a href="#image22">
-                                    <img src="/resources/images/galeria/exponentes_6to_informatica.jpg" alt="" class="gallery-img">
+                                    <img src="/resources/images/galeria/exponentes_6to_informatica.jpg" alt="Ponentes de la Presentación de Proyecto de 6to Año de Informática (30/11/2022)" title="Ponentes de la Presentación de Proyecto de 6to Año de Informática (30/11/2022)" class="gallery-img">
                                 </a>
                                 <a href="#image23">
-                                    <img src="/resources/images/galeria/presentacion_6to_administracion.jpg" alt="" class="gallery-img">
+                                    <img src="/resources/images/galeria/presentacion_6to_administracion.jpg" alt="Presentación de Proyecto de 6to Año de Administración (30/11/2022)" title="Presentación de Proyecto de 6to Año de Administración (30/11/2022)" class="gallery-img">
                                 </a>
                             </div>
                             <article class="light-box" id="image15">
