--- a/pages/servicios/servicios.html
+++ b/pages/servicios/servicios.html
@@ -15,6 +15,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="Author" content="Gabriel Vieira">
         <title>Servicios y Propósitos - Jose Laurencio Silva</title>
         <link rel="shortcut icon" href="/resources/images/favicon.ico" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -30,7 +31,7 @@
                     E.T.I.R.Z <br />
                     José Laurencio Silva
                 </h1>
-                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img" />
+                <img src="/resources/images/descarga.jpeg" alt="Insignia Jose Laurencio Silva" title="Insignia Jose Laurencio Silva" class="banner-img" />
             </div>
             <nav class="nav-bar">
                 <input type="checkbox" name="" id="check-menu" />
@@ -69,7 +70,7 @@
                     <div class="content-section">
                         <h1 class="title-section">Servicios y Propósitos</h1>
                         <div>
-                            <img src="/resources/images/estructura/biblioteca1.jpg" class="img-content">
+                            <img src="/resources/images/estructura/biblioteca1.jpg" alt="Biblioteca ETIRZ Jose Laurencio Silva" title="Biblioteca ETIRZ Jose Laurencio Silva" class="img-content">
                             <i><strong>Imágen de la Directora y los Estudiantes de 2do año realizando una actividad.</strong></i>
                         </div>
                         <p class="text-section">
