--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>"E.T.I.R.Z" - José Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <meta name="description" content="La Escuela Técnica Industrial Robinsoniana y Zamorana José Laurencio Silva, es la escuela donde se ofrece estudios correspondientes al Nivel de Educación Básica general y profesional.">
+        <meta name="Author" content="Gabriel Vieira">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link rel="shortcut icon" href="/resources/images/favicon.ico" type="image/x-icon" />
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
@@ -29,7 +31,7 @@
                     E.T.I.R.Z <br />
                     José Laurencio Silva
                 </h1>
-                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img" />
+                <img src="/resources/images/descarga.jpeg" alt="Insignia Jose Laurencio Silva" title="Insignia Jose Laurencio Silva" class="banner-img" />
             </div>
         </header>
         <main>
