--- a/pages/estructura/estructura_fisica.html
+++ b/pages/estructura/estructura_fisica.html
@@ -15,6 +15,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="Author" content="Gabriel Vieira">
         <title>Estructura Física - Jose Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="shortcut icon" href="/resources/images/favicon.ico" type="image/x-icon">
@@ -30,7 +31,7 @@
                     E.T.I.R.Z <br />
                     José Laurencio Silva
                 </h1>
-                <img src="/resources/images/descarga.jpeg"  class="banner-img" />
+                <img src="/resources/images/descarga.jpeg" alt="Insignia Jose Laurencio Silva" title="Insignia Jose Laurencio Silva" class="banner-img" />
             </div>
             <nav class="nav-bar">
                 <input type="checkbox" name="" id="check-menu" />
