--- a/pages/menciones/administracion.html
+++ b/pages/menciones/administracion.html
@@ -15,6 +15,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="El técnico en Administración esta capacitado para ejecutar y coordinar procesos administrativos, de recursos humanos y operaciones financieras de una organización, colaborando desde el análisis técnico en la toma de decisiones.">
+        <meta name="Author" content="Gabriel Vieira">
         <title>Administración - Jose Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="shortcut icon" href="/resources/images/favicon.ico" type="image/x-icon">
@@ -30,7 +32,7 @@
                     E.T.I.R.Z <br />
                     José Laurencio Silva
                 </h1>
-                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img" />
+                <img src="/resources/images/descarga.jpeg" alt="Insignia Jose Laurencio Silva" title="Insignia Jose Laurencio Silva" class="banner-img" />
             </div>
             <nav class="nav-bar">
                 <input type="checkbox" name="" id="check-menu" />
@@ -69,7 +71,7 @@
                     <div class="content-section">
                         <h1 class="title-section">Administración</h1>
                         <div>
-                            <img src="/resources/images/menciones/administracion1.jpg" alt="" class="img-content" />
+                            <img src="/resources/images/menciones/administracion1.jpg" alt="Administración" title="Administración" class="img-content" />
                         </div>
                         <p class="text-section">El técnico en Administración esta capacitado para ejecutar y coordinar procesos administrativos, de recursos humanos y operaciones financieras de una organización, colaborando desde el análisis técnico en la toma de decisiones.</p>
                         <br />
