--- a/pages/menciones/informatica.html
+++ b/pages/menciones/informatica.html
@@ -15,6 +15,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="El Técnico en informática analiza, diseña y maneja sistemas de información. Desarrolla distintos tipos de estructuras lógcias para solucionar problemas usando computadoras. Toma decisiones de índole administrativo, establece normas y procedimientos para los sistemas de computación desarrollados.">
+        <meta name="Author" content="Gabriel Vieira">
         <title>Informática - Jose Laurencio Silva</title>
         <link rel="shortcut icon" href="/resources/images/favicon.ico" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -30,7 +32,7 @@
                     E.T.I.R.Z <br />
                     José Laurencio Silva
                 </h1>
-                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img" />
+                <img src="/resources/images/descarga.jpeg" alt="Insignia Jose Laurencio Silva" title="Insignia Jose Laurencio Silva" class="banner-img" />
             </div>
             <nav class="nav-bar">
                 <input type="checkbox" name="" id="check-menu" />
@@ -69,7 +71,7 @@
                     <div class="content-section">
                         <h1 class="title-section">Informática</h1>
                         <div>
-                            <img src="/resources/images/menciones/informatica1.jpg" alt="" class="img-content" />
+                            <img src="/resources/images/menciones/informatica1.jpg" alt="Informática" title="Informática" class="img-content" />
                         </div>
                         <p class="text-section">El Técnico en informática analiza, diseña y maneja sistemas de información. Desarrolla distintos tipos de estructuras lógcias para solucionar problemas usando computadoras. Toma decisiones de índole administrativo, establece normas y procedimientos para los sistemas de computación desarrollados.</p>
                         <br />
