--- a/pages/menciones/mecanica.html
+++ b/pages/menciones/mecanica.html
@@ -16,6 +16,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Mecánica - Jose Laurencio Silva</title>
+        <meta name="description" content="Los técnicos medios en mecánica se encargan del diseño, desarrollo, mantenimiento y operación de todo tipo de máquinas y de sus equipamientos. Trabajan en una amplia gama de industrias, incluyendo industrias manufactureras o de procesamiento.">
+        <meta name="Author" content="Gabriel Vieira">
         <link rel="shortcut icon" href="/resources/images/favicon.ico" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,7 +32,7 @@
                     E.T.I.R.Z <br />
                     José Laurencio Silva
                 </h1>
-                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img" />
+                <img src="/resources/images/descarga.jpeg" alt="Insignia Jose Laurencio Silva" title="Insignia Jose Laurencio Silva" class="banner-img" />
             </div>
             <nav class="nav-bar">
                 <input type="checkbox" name="" id="check-menu" />
@@ -69,7 +71,7 @@
                     <div class="content-section">
                         <h1 class="title-section">Mecánica</h1>
                         <div>
-                            <img src="/resources/images/menciones/mecanica1.jpg" alt="Mecánica" class="img-content" />
+                            <img src="/resources/images/menciones/mecanica1.jpg" alt="Mecánica" title="Mecánica" class="img-content" />
                         </div>
                         <p class="text-section">Los técnicos medios en mecánica se encargan del diseño, desarrollo, mantenimiento y operación de todo tipo de máquinas y de sus equipamientos. Trabajan en una amplia gama de industrias, incluyendo industrias manufactureras o de procesamiento.</p>
                         <br />
