--- a/pages/menciones/minas.html
+++ b/pages/menciones/minas.html
@@ -15,6 +15,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Los técnicos en minería realizan tareas técnicas para ayudar en la investigación y experimentación relacionada con la metalurgia, en la mejora de los métodos de extracción de minerales sólidos, petróleo y gas, y en el diseño, construcción, operación, mantenimiento y reparación de las minas y las instalaciones, de los sistemas de transporte y almacenamiento de petróleo y gas natural, y para la extracción de metales de los minerales.">
+        <meta name="Author" content="Gabriel Vieira">
         <title>Minas - Jose Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,7 +32,7 @@
                     E.T.I.R.Z <br />
                     José Laurencio Silva
                 </h1>
-                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img" />
+                <img src="/resources/images/descarga.jpeg" alt="Insignia Jose Laurencio Silva" title="Insignia Jose Laurencio Silva" class="banner-img" />
             </div>
             <nav class="nav-bar">
                 <input type="checkbox" name="" id="check-menu" />
@@ -69,7 +71,7 @@
                     <div class="content-section">
                         <h1 class="title-section">Minas</h1>
                         <div>
-                            <img src="/resources/images/menciones/minas1.jpg" alt="" class="img-content" />
+                            <img src="/resources/images/menciones/minas1.jpg" alt="Minas" title="Minas" class="img-content" />
                         </div>
                         <p class="text-section">Los técnicos en minería realizan tareas técnicas para ayudar en la investigación y experimentación relacionada con la metalurgia, en la mejora de los métodos de extracción de minerales sólidos, petróleo y gas, y en el diseño, construcción, operación, mantenimiento y reparación de las minas y las instalaciones, de los sistemas de transporte y almacenamiento de petróleo y gas natural, y para la extracción de metales de los minerales.</p>
                         <br />
