--- a/pages/nosotros/mision_vision_valores.html
+++ b/pages/nosotros/mision_vision_valores.html
@@ -15,6 +15,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="El E.T.I.R.Z José Laurencio Silva es una institución participativa y democrática donde todos sus miembros participan en la toma de decisiones y en la ejecución y evaluación de las actividades escolares.">
+        <meta name="Author" content="Gabriel Vieira">
         <title>Misión, Visión y Valores - Jose Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,7 +32,7 @@
                     E.T.I.R.Z <br />
                     José Laurencio Silva
                 </h1>
-                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img" />
+                <img src="/resources/images/descarga.jpeg" alt="Insignia Jose Laurencio Silva" title="Insignia Jose Laurencio Silva" class="banner-img" />
             </div>
             <nav class="nav-bar">
                 <input type="checkbox" name="" id="check-menu" />
@@ -69,7 +71,7 @@
                     <div class="content-section">
                         <h1 class="title-section">Misión, Visión y Valores</h1>
                         <div>
-                            <img src="/resources/images/nosotros/mision_vision_valores.jpeg" alt="" class="img-content" />
+                            <img src="/resources/images/nosotros/mision_vision_valores.jpeg" alt="1er año ETIRZ Jose Lauencio Silva" title="1er año ETIRZ Jose Lauencio Silva" class="img-content" />
                             <i><strong>Imágen de los estudiantes de 1er año.</strong></i>
                         </div>
                         <p class="text-section">
