--- a/pages/menciones/mecanica.html
+++ b/pages/menciones/mecanica.html
@@ -140,6 +140,7 @@
                     </ul>
                 </div>
             </div>
+            <p class="cpy">Desarrollado por <strong>Gabriel (str1ker) Vieira</strong> ----- <strong>GitHub : </strong><a>https://github.com/Str1ker333</a>  ·  <strong>Gmail : </strong><span>gabrismar333@gmail.com</span></p>
         </footer>
     </body>
 </html>
