--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                         <div class="article-container">
                             <div class="article-content">
                                 <div>
-                                    <a href="/pages/menciones/mecanica.html"><p>Mecánica</p></a>
-                                    <a href="/pages/menciones/administracion.html"><p>Administración</p></a>
+                                    <a href="/pages/menciones/mecanica.html">Mecánica</a>
+                                    <a href="/pages/menciones/administracion.html">Administración</a>
                                 </div>
                                 <div>
-                                    <a href="/pages/menciones/minas.html"><p>Minas</p></a>
-                                    <a href="/pages/menciones/informatica.html"><p>Informática</p></a>
+                                    <a href="/pages/menciones/minas.html">Minas</a>
+                                    <a href="/pages/menciones/informatica.html">Informática</a>
                                 </div>
                             </div>
                         </div>
@@ -72,43 +72,47 @@
                         <div class="article-container">
                             <div class="article-content">
                                 <div>
-                                    <a href="/pages/nosotros/historia.html"><p>Historia</p></a>
+                                    <a href="/pages/nosotros/historia.html">
+                                        Historia
+                                    </a>
                                 </div>
                                 <div>
-                                    <a href="/pages/nosotros/mision_vision_valores.html"><p>Misión, Visión y Valores</p></a>
+                                    <a href="/pages/nosotros/mision_vision_valores.html">
+                                        Misión, Visión y Valores
+                                    </a>
                                 </div>
                             </div>
                         </div>
                     </article>
                     <article class="estructura">
-                        <h2 class="article-title">Estructura</h2>
-                        <div class="article-container">
+                        <h2 class="article-title">Estructura</h2> 
+                        <a class="article-container" href="/pages/estructura/estructura_fisica.html">
                             <div class="article-content">
                                 <div>
-                                    <a href="/pages/estructura/estructura_fisica.html"><p>Estructura Física</p></a>
+                                    <p>Estructura Física</p>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </article>
                     <article class="servicios">
                         <h2 class="article-title">Servicios</h2>
-                        <div class="article-container">
+                        <a class="article-container" href="/pages/servicios/servicios.html">
                             <div class="article-content">
                                 <div>
-                                    <a href="/pages/servicios/servicios.html"><p>Servicios y Propósitos</p></a>
+                                    <p>Servicios y Propósitos</p>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </article>
                     <article class="galeria">
                         <h2 class="article-title">Galería</h2>
-                        <div class="article-container">
+                        <a class="article-container" href="/pages/galeria/galeria.html">
                             <div class="article-content">
                                 <div>
-                                    <a href="/pages/galeria/galeria.html"><p>Galería</p></a>
+                                    <p>Galería</p>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </article>
                 </div>
             </section>
